// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/index.test.ts should fix issue1976 1`] = `
{
  "components": {
    "schemas": {
      "CodeLoginDTO": {
        "properties": {
          "code": {
            "description": "验证码",
            "example": "0000",
            "type": "string",
          },
          "phone": {
            "description": "11位手机号码",
            "example": "17755556666",
            "type": "string",
          },
          "site": {
            "description": "产品线",
            "enum": [
              "sport",
              "question",
            ],
            "type": "string",
          },
          "uuid": {
            "description": "随机数",
            "example": "xxxx",
            "type": "string",
          },
        },
        "type": "object",
      },
      "LoginDTO": {
        "properties": {
          "password": {
            "description": "密码",
            "example": "xxx",
            "type": "string",
          },
          "phone": {
            "description": "11位手机号码",
            "example": "17755556666",
            "type": "string",
          },
          "site": {
            "description": "产品线",
            "enum": [
              "sport",
              "question",
            ],
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "contact": {},
    "description": "This is a swagger-ui for midwayjs project",
    "title": "My Project",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/cats/login": {
      "post": {
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/LoginDTO",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "description": "OK",
          },
        },
        "summary": "手机号密码登录",
        "tags": [
          "cats",
        ],
      },
    },
    "/cats/smsLogin": {
      "post": {
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CodeLoginDTO",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "description": "OK",
          },
        },
        "summary": "验证码密码登录",
        "tags": [
          "cats",
        ],
      },
    },
  },
  "servers": [],
  "tags": [
    {
      "description": "cats",
      "name": "cats",
    },
  ],
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 1`] = `
{
  "properties": {
    "agedt": {
      "description": "The age of ttthe Cat",
      "example": 1,
      "type": "number",
    },
    "breedtd": {
      "description": "The breed tttof the Cat",
      "example": "Maine Coon",
      "type": "string",
    },
    "namedt": {
      "description": "The name of the Cat",
      "example": "Kitty",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 2`] = `
{
  "properties": {
    "aged": {
      "description": "The age of the Cat",
      "example": 1,
      "type": "number",
    },
    "breedd": {
      "description": "The breed of the Cat",
      "example": "Maine Coon",
      "type": "string",
    },
    "named": {
      "description": "The name of the Cat",
      "example": "Kitty",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 3`] = `
{
  "properties": {
    "agea": {
      "description": "The age of thaae Cat",
      "example": 1,
      "type": "number",
    },
    "breeda": {
      "description": "The breed of taahe Cat",
      "example": "Maine Coon",
      "type": "string",
    },
    "catdsa": {
      "description": "The breed of the Cat",
      "items": {
        "$ref": "#/components/schemas/Catd",
      },
      "type": "array",
    },
    "namea": {
      "description": "The name aaof the Cat",
      "example": "Kitty",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 4`] = `
{
  "properties": {
    "age": {
      "description": "The age of the Cat",
      "example": 1,
      "type": "number",
    },
    "agedata": {
      "description": "The age of the CatDSate",
      "example": "2022-12-12 11:11:11",
      "format": "date",
      "type": "string",
    },
    "breed": Object {
      "description": "The breed of the Cat",
      "example": "Maine Coon",
      "type": "string",
    },
    "catds": Object {
      "description": "The breed of the Cat",
      "items": Object {
        "$ref": "#/components/schemas/Catd",
      },
      "type": "array",
    },
    "name": Object {
      "description": "The name of the Cat",
      "example": "Kitty",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 5`] = `
Object {
  "properties": Object {
    "age": Object {
      "description": "The name of the Catage",
      "example": "1",
      "maxItems": 1,
      "maxLength": 1,
      "maxProperties": 2,
      "maximum": 10,
      "type": "number",
    },
    "agedata": Object {
      "description": "The age of the CatDSate",
      "example": "2022-12-12 11:11:11",
      "format": "date",
      "type": "string",
    },
    "breed": Object {
      "description": "The name of the Catbreed",
      "example": "bbbb",
      "type": "string",
    },
    "breeds": Object {
      "description": "The name of the Catage",
      "example": [
        "1",
      ],
      "items": Object {
        "type": "string",
      },
      "nullable": true,
      "type": "array",
      "uniqueItems": true,
    },
    "hello": Object {
      "enum": [
        "One",
        "Two",
        "Three",
      ],
      "type": "string",
    },
    "name": Object {
      "description": "The name of the Catname",
      "example": "Kitty",
      "format": "binary",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`/test/index.test.ts test swagger should get swagger json 6`] = `
Object {
  "get": Object {
    "parameters": [
      Object {
        "in": "header",
        "name": "x-test-one",
        "schema": Object {
          "type": "string",
        },
      },
      Object {
        "allowEmptyValue": false,
        "explode": true,
        "in": "query",
        "name": "aa",
        "required": true,
        "schema": Object {
          "enum": [
            "One",
            "Two",
            "Three",
          ],
          "type": "string",
        },
        "style": "form",
      },
      Object {
        "allowEmptyValue": false,
        "explode": true,
        "in": "query",
        "name": "test",
        "required": true,
        "schema": Object {
          "enum": [
            "One",
            "Two",
            "Three",
          ],
          "type": "string",
        },
        "style": "form",
      },
      Object {
        "description": "hello world id number",
        "example": 12,
        "explode": false,
        "in": "path",
        "name": "id",
        "required": true,
        "schema": Object {
          "type": "string",
        },
        "style": "simple",
      },
    ],
    "responses": Object {
      "200": Object {
        "content": Object {
          "application/json": Object {
            "schema": Object {
              "$ref": "#/components/schemas/Cat",
            },
          },
        },
        "description": "The found record",
      },
    },
    "security": [
      Object {
        "ttt": [],
      },
      Object {
        "bbb": [],
      },
    ],
    "tags": [
      "2-国家测试",
      "sss",
    ],
    "x-hello": Object {
      "hello": "world",
    },
  },
  "post": Object {
    "parameters": [
      Object {
        "in": "header",
        "name": "x-test-one",
        "schema": Object {
          "type": "string",
        },
      },
      Object {
        "description": "hello world id number",
        "example": 12,
        "explode": false,
        "in": "path",
        "name": "id",
        "required": true,
        "schema": Object {
          "format": "int32",
          "type": "number",
        },
        "style": "simple",
      },
    ],
    "requestBody": Object {
      "content": Object {
        "application/octet-stream": Object {
          "schema": Object {
            "format": "binary",
            "type": "string",
          },
        },
      },
      "description": "hello world",
      "required": true,
    },
    "responses": Object {
      "200": Object {
        "content": Object {
          "application/json": Object {
            "schema": Object {
              "$ref": "#/components/schemas/Cat",
            },
          },
        },
        "description": "成功了",
      },
      "403": Object {
        "description": "Forbidden.",
      },
      "404": Object {
        "description": "NotFound.",
      },
    },
    "security": [
      Object {
        "ttt": [],
      },
      Object {
        "bbb": [],
      },
    ],
    "summary": "Create cat",
    "tags": [
      "2-国家测试",
      "sss",
    ],
  },
}
`;
